Atualiza debug para false

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         y: 300
                     },
                     //indica a região que está sendo considerada corpo do personagem e velocidade
-                    debug: true
+                    debug: false
 
                 }
             },
